<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.home.Login.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="258.64dp"
        android:src="@drawable/img_ball"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:text="Welcome to"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="LIBMANAGER"
        android:textColor="@color/primary"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:ignore="UselessLeaf">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTK"
                android:layout_width="match_parent"
                android:text=""
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_3_fill"
                android:drawablePadding="10dp"
                android:fontFamily="@font/red_hat_display_regular"
                android:hint="@string/ten_dang_nhap"
                android:inputType="textPersonName"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:drawableStart="@drawable/lock_fill"
                android:drawablePadding="10dp"
                android:fontFamily="@font/red_hat_display_regular"
                android:hint="@string/mat_khau"
                android:inputType="textPassword"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:minHeight="40dp"
            android:fontFamily="@font/red_hat_display_medium"
            android:textSize="14sp"
            android:layout_marginStart="215dp"
            android:textColor="@color/primary"
            android:textStyle="italic"
            android:text="@string/remember_pass"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:onClick="checkLogin"
            android:background="@drawable/bgr_btn_primary_rd5"
            android:fontFamily="@font/red_hat_display_bold"
            android:padding="16dp"
            android:text="@string/dang_nhap"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/tvHoacDangNhap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:alpha="0.7"
                android:fontFamily="@font/red_hat_display_regular"
                android:gravity="center"
                android:text="@string/hoac_dang_nhap"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSignInWithFbGG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSignInFB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_sign_in_fb"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivSignInGG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_sign_in_gg"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>